--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^3.4.4",
     "spotify-web-api-js": "^1.5.1",
     "web-vitals": "^0.2.4"
   },
