--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-native-web": "^0.17.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
